[package]
name = "tqsdk_formatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
polars = { version = "*", features = ["dtype-full", "dtype-datetime", "strings", "lazy", "timezones", "parquet"] }
indicatif = "*"
num_cpus = "*"